[package]
name = "roberta-snli"
version = "0.1.0"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"

[dependencies]
rust-bert = { version = "0.12" }
tch = "0.3.0"
anyhow = "1.0"
rust_tokenizers = { version = "6.1.0" }
dirs = "3.0"
cached-path = "0.4.5"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
indicatif = "0.15"
flume = "0.10"
num_cpus = "1.13"
crossbeam = "0.8"
rand = "0.8.4"
batched-fn = { version = "0.2.2" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
